<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    android:background="@color/background"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fab"
                android:layout_width="100dp"
                android:layout_height="150dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="SpiderMan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="20-06-2019" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/txtGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Comedy" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/synopsis" />

            <TextView
                android:id="@+id/txtOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Comedy" />
        </LinearLayout>

        <Button
            android:text="@string/add_to_favorite"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/shape_transparant"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
